--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -28,3 +28,44 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
+    - name: Package VM
+        run: tar -zcvf dubbo-consumer-1.0-SNAPSHOT.tar.gz dubbo-consumer/target/dubbo-consumer-1.0-SNAPSHOT.jar
+    #- name: Publish to GitHub Packages Apache Maven
+    #  run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+    #  env:
+    #    GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
+    - name: Upload Artifact
+    uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: dubbo-consumer-1.0-SNAPSHOT.tar.gz
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
+        with:
+          tag_name: v${{github.run_number}}
+          release_name: Release v${{github.run_number}}
+          body: |
+            Release notes for v1.0.0
+          draft: false
+          prerelease: false
+       - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./
+          asset_name: dubbo-consumer-1.0-SNAPSHOT.tar.gz
+          asset_content_type: application/zip
