--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,16 +29,16 @@ jobs:
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
     - name: Package VM
-        run: tar -zcvf dubbo-consumer-1.0-SNAPSHOT.tar.gz dubbo-consumer/target/dubbo-consumer-1.0-SNAPSHOT.jar
+      run: tar -xzvf dubbo.tar.gz dubbo-consumer/target/dubbo-consumer-1.0-SNAPSHOT.jar
     #- name: Publish to GitHub Packages Apache Maven
     #  run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
     #  env:
     #    GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
     - name: Upload Artifact
-    uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: dubbo-consumer-1.0-SNAPSHOT.tar.gz
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifacts
+        path: dubbo-consumer-1.0-SNAPSHOT.tar.gz
   release:
     needs: build
     runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
             Release notes for v1.0.0
           draft: false
           prerelease: false
-       - name: Upload Release Asset
+      - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
