--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -66,6 +66,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./
+          asset_path: ./dubbo-consumer-1.0-SNAPSHOT.tar.gz
           asset_name: dubbo-consumer-1.0-SNAPSHOT.tar.gz
           asset_content_type: application/zip
