--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -37,15 +37,24 @@ jobs:
       with:
         name: dubbo-consumer-1.0-SNAPSHOT.tar.gz
         path: dubbo-consumer-1.0-SNAPSHOT.tar.gz
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: dubbo-provider-1.0-SNAPSHOT.tar.gz
+        path: dubbo-provider-1.0-SNAPSHOT.tar.gz
   release:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download build artifacts
+      - name: Download consumer artifacts
         uses: actions/download-artifact@v4
         with:
           name: dubbo-consumer-1.0-SNAPSHOT.tar.gz
+      - name: Download provider artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dubbo-provider-1.0-SNAPSHOT.tar.gz
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
@@ -58,7 +67,16 @@ jobs:
             Release notes for v1.0.0
           draft: false
           prerelease: false
-      - name: Upload Release Asset
+      - name: Upload provider Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dubbo-provider-1.0-SNAPSHOT.tar.gz
+          asset_name: dubbo-provider-1.0-SNAPSHOT.tar.gz
+          asset_content_type: application/zip
+      - name: Upload consumer Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
