--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,8 +26,10 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
-    - name: Package VM
+    - name: Package consumer
       run: tar -czvf dubbo-consumer-1.0-SNAPSHOT.tar.gz dubbo-consumer/target/dubbo-consumer-1.0-SNAPSHOT.jar
+    - name: Package provider
+      run: tar -czvf dubbo-provider-1.0-SNAPSHOT.tar.gz dubbo-provider/target/dubbo-provider-1.0-SNAPSHOT.jar
     #- name: Publish to GitHub Packages Apache Maven
     #  run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
     #  env:
